# dynamics-client

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  search.html  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  main.yml  release.yml  test.yml
css/: docs.css
docs/: docs.md  index.html  index.md
docs/css/: docs.css
dynamics/: __init__.py  api_actions.py  api_functions.py  apply_functions.py  cache.py  client.py  enums.py  exceptions.py  fetchxml.py  normalizers.py  query_functions.py  status.py  test.py  typing.py  utils.py
dynamics/client/: __init__.py  aio.py  base.py  sync.py
dynamics/management/commands/: query_dynamics.py
search/: search_index.json
tests/: conftest.py  test_api_actions.py  test_api_function.py  test_apply_functions.py  test_cache.py  test_dynamics_client.py  test_fetchxml.py  test_mock_client.py  test_normalizers.py  test_query_functions.py  test_utils.py
tests/client/: test_async_client.py  test_base_client.py  test_sync_client.py
